# my-codex

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  DEMO.md  README.de.md  README.el.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.pl.md  README.pt.md  README.ru.md  README.tr.md  README.vi.md  README.zh-TW.md  README.zh.md  RELEASE_BODY.md  RELEASE_PROTOCOL.md  biome.json  dist-workspace.toml  oh-my-codex-0.15.0.tgz  package-lock.json  package.json  tsconfig.json  tsconfig.no-unused.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.omc/: project-memory.json
crates/omx-api/: Cargo.toml
crates/omx-api/src/: lib.rs  main.rs
crates/omx-api/tests/: cli.rs
crates/omx-cli/: Cargo.toml
crates/omx-cli/src/: ask.rs  doctor.rs  lib.rs  main.rs  reasoning.rs  setup.rs
crates/omx-cli/tests/: ask_passthrough.rs
docs/: STATE_MODEL.md  _config.yml  adapt.md  agents.html  autoresearch-goal.md  clawhip-event-contract.md  codex-native-hooks.md  discord-integration.md  geobench.md  getting-started.html  guidance-schema.md  hermes-mcp-bridge.md  hooks-extension.md  index.html  integrations.html  interop-team-mutation-contract.md  lifeos-operating-guide.md  migration-mainline-post-v0.4.4.md  openclaw-integration.de.md  openclaw-integration.es.md  openclaw-integration.fr.md  openclaw-integration.it.md  openclaw-integration.ja.md  openclaw-integration.ko.md  openclaw-integration.md  openclaw-integration.pt.md  openclaw-integration.ru.md  openclaw-integration.tr.md  qa-plan-0.4.2.md  (+71 more)
(+1241 files in other folders)
